--- a/panel.html
+++ b/panel.html
@@ -73,111 +73,7 @@
 </div>
 <script src="script.js"></script>
 <script>
-var lll = localStorage.getItem("textvalue");
-var unam = lll.toLocaleLowerCase();
-if (unam == "admin" || unam == "sujit"){
-    document.getElementById('memebr-number').innerHTML = "Membership no. " + "001";
-    document.getElementById('name-container').innerHTML ="Name:          " +  "Sujit" ;
-    document.getElementById('post-container').innerHTML = "Post: " + "Admin/Leader/Founder";
-    document.getElementById('isamemberof-lok').innerHTML = "Is a member of LOK?: " + "Yes";
-    document.getElementById('work-progress').innerHTML = "Progress:    " + "Good (need a improvement)";
-    document.getElementById('status-container').innerHTML = "Status:     " + "Active" ;
-    document.getElementById('marks-in-last-test').innerHTML = "MarksGotInLastTest: " + "36 out of 50" ;
-    document.getElementById('violating-rule').innerHTML = "Rules violating rate:  " + "0% (Perfect member)" ;
-
-}
-else if (unam.includes("james")){
-    document.getElementById('memebr-number').innerHTML = "Membership no. " + "002";
-    document.getElementById('name-container').innerHTML ="Name:          " +  " James" ;
-    document.getElementById('post-container').innerHTML = "Post: " + "Co-founder";
-    document.getElementById('isamemberof-lok').innerHTML = "Is a member of LOK?: " + "Yes";
-    document.getElementById('work-progress').innerHTML = "Progress:    " + "Good (need a improvement)";
-    document.getElementById('status-container').innerHTML = "Status:     " + "Active" ;
-    document.getElementById('marks-in-last-test').innerHTML = "MarksGotInLastTest: " + "00 out of 50" ;
-    document.getElementById('violating-rule').innerHTML = "Rules violating rate:  " + "0% (Perfect member)" ;
-}
-else if (unam.includes("anuj")){
-    document.getElementById('memebr-number').innerHTML = "Membership no. " + "003";
-    document.getElementById('name-container').innerHTML ="Name:          " +  "Anuj" ;
-    document.getElementById('post-container').innerHTML = "Post: " + "News Minister";
-    document.getElementById('isamemberof-lok').innerHTML = "Is a member of LOK?: " + "Yes";
-    document.getElementById('work-progress').innerHTML = "Progress:    " + "Good (need a improvement)";
-    document.getElementById('status-container').innerHTML = "Status:     " + "Active" ;
-    document.getElementById('marks-in-last-test').innerHTML = "MarksGotInLastTest: " + "00 out of 50" ;
-    document.getElementById('violating-rule').innerHTML = "Rules violating rate:  " + "57% (try no to give rough word in group)" ;
-}
-else if (unam.includes("aryan")){
-    document.getElementById('memebr-number').innerHTML = "Membership no. " + "004";
-    document.getElementById('name-container').innerHTML ="Name:          " +  "Aryan" ;
-    document.getElementById('post-container').innerHTML = "Post: " + "I.A.";
-    document.getElementById('isamemberof-lok').innerHTML = "Is a member of LOK?: " + "Yes";
-    document.getElementById('work-progress').innerHTML = "Progress:    " + "Good (need a improvement)";
-    document.getElementById('status-container').innerHTML = "Status:     " + "Active" ;
-    document.getElementById('marks-in-last-test').innerHTML = "MarksGotInLastTest: " + "00 out of 50" ;
-    document.getElementById('violating-rule').innerHTML = "Rules violating rate:  " + "0% (Perfect member)" ;
-}
-else if (unam.includes("ghraj")){
-    document.getElementById('memebr-number').innerHTML = "Membership no. " + "005";
-    document.getElementById('name-container').innerHTML ="Name:          " +  "Dhirghraj" ;
-    document.getElementById('post-container').innerHTML = "Post: " + "member";
-    document.getElementById('isamemberof-lok').innerHTML = "Is a member of LOK?: " + "Yes";
-    document.getElementById('work-progress').innerHTML = "Progress:    " + "Good (need a improvement)";
-    document.getElementById('status-container').innerHTML = "Status:     " + "Active" ;
-    document.getElementById('marks-in-last-test').innerHTML = "MarksGotInLastTest: " + "00 out of 50" ;
-    document.getElementById('violating-rule').innerHTML = "Rules violating rate:  " + "0% (Perfect member)" ;
-}
-else if (unam.includes("rohit")){
-    document.getElementById('memebr-number').innerHTML = "Membership no. " + "006";
-    document.getElementById('name-container').innerHTML ="Name:          " +  "Rohit" ;
-    document.getElementById('post-container').innerHTML = "Post: " + "member";
-    document.getElementById('isamemberof-lok').innerHTML = "Is a member of LOK?: " + "Yes";
-    document.getElementById('work-progress').innerHTML = "Progress:    " + "Good (need a improvement)";
-    document.getElementById('status-container').innerHTML = "Status:     " + "Active" ;
-    document.getElementById('marks-in-last-test').innerHTML = "MarksGotInLastTest: " + "00 out of 50" ;
-    document.getElementById('violating-rule').innerHTML = "Rules violating rate:  " + "45% (need to improve)" ;
-}
-else if (unam.includes("manish")){
-    document.getElementById('memebr-number').innerHTML = "Membership no. " + "007";
-    document.getElementById('name-container').innerHTML ="Name:          " +  "Manish" ;
-    document.getElementById('post-container').innerHTML = "Post: " + "Co-admin";
-    document.getElementById('isamemberof-lok').innerHTML = "Is a member of LOK?: " + "Yes";
-    document.getElementById('work-progress').innerHTML = "Progress:    " + "Good (need a improvement)";
-    document.getElementById('status-container').innerHTML = "Status:     " + "Active" ;
-    document.getElementById('marks-in-last-test').innerHTML = "MarksGotInLastTest: " + "36 out of 50" ;
-    document.getElementById('violating-rule').innerHTML = "Rules violating rate:  " + "0% (Perfect member)" ;
-}
-else if (unam.includes("mit")){
-    document.getElementById('memebr-number').innerHTML = "Membership no. " + "008";
-    document.getElementById('name-container').innerHTML ="Name:          " +  "Sumit" ;
-    document.getElementById('post-container').innerHTML = "Post: " + "member";
-    document.getElementById('isamemberof-lok').innerHTML = "Is a member of LOK?: " + "Yes";
-    document.getElementById('work-progress').innerHTML = "Progress:    " + "Good (need a improvement)";
-    document.getElementById('status-container').innerHTML = "Status:     " + "Active" ;
-    document.getElementById('marks-in-last-test').innerHTML = "MarksGotInLastTest: " + "00 out of 50" ;
-    document.getElementById('violating-rule').innerHTML = "Rules violating rate:  " + "0% (Perfect member)" ;
-}
-else if (unam.includes("rajan")){
-    document.getElementById('memebr-number').innerHTML = "Membership no. " + "009";
-    document.getElementById('name-container').innerHTML ="Name:          " +  "Rajan" ;
-    document.getElementById('post-container').innerHTML = "Post: " + "Co-I.A.";
-    document.getElementById('isamemberof-lok').innerHTML = "Is a member of LOK?: " + "Yes";
-    document.getElementById('work-progress').innerHTML = "Progress:    " + "Good (need a improvement)";
-    document.getElementById('status-container').innerHTML = "Status:     " + "Active" ;
-    document.getElementById('marks-in-last-test').innerHTML = "MarksGotInLastTest: " + "00 out of 50" ;
-    document.getElementById('violating-rule').innerHTML = "Rules violating rate:  " + "0% (Perfect member)" ;
-}
-else {
-    document.getElementById('fall').innerHTML = "{{ your name is invalid. Please type your real name }}"
-    document.getElementById('memebr-number').innerHTML = "Membership no. " + "{{ null}}";
-    document.getElementById('name-container').innerHTML ="Name:          " +  unam ;
-    document.getElementById('post-container').innerHTML = "Post: " + "{{ null }}";
-    document.getElementById('isamemberof-lok').innerHTML = "Is a member of LOK?: " + "No";
-    document.getElementById('work-progress').innerHTML = "Progress:    " + "{{ null }}";
-    document.getElementById('status-container').innerHTML = "Status:     " + "inactive" ;
-    document.getElementById('marks-in-last-test').innerHTML = "MarksGotInLastTest: " + "{{ null }}" ;
-    document.getElementById('violating-rule').innerHTML = "Rules violating rate:  " + "{{ null }}" ;
-}
-</script>
+function _0x2cd1(_0x37ad78,_0x4c157b){var _0x408161=_0x4081();return _0x2cd1=function(_0x2cd13b,_0x467b4f){_0x2cd13b=_0x2cd13b-0x164;var _0x47c50f=_0x408161[_0x2cd13b];return _0x47c50f;},_0x2cd1(_0x37ad78,_0x4c157b);}var _0x4d06f9=_0x2cd1;(function(_0x22fb03,_0x14bcf5){var _0x1f14ff=_0x2cd1,_0x215bec=_0x22fb03();while(!![]){try{var _0x1aa81e=parseInt(_0x1f14ff(0x18b))/0x1*(-parseInt(_0x1f14ff(0x176))/0x2)+-parseInt(_0x1f14ff(0x169))/0x3*(parseInt(_0x1f14ff(0x16d))/0x4)+parseInt(_0x1f14ff(0x17d))/0x5*(-parseInt(_0x1f14ff(0x173))/0x6)+-parseInt(_0x1f14ff(0x194))/0x7*(-parseInt(_0x1f14ff(0x19e))/0x8)+-parseInt(_0x1f14ff(0x179))/0x9*(-parseInt(_0x1f14ff(0x186))/0xa)+parseInt(_0x1f14ff(0x17b))/0xb+parseInt(_0x1f14ff(0x16f))/0xc;if(_0x1aa81e===_0x14bcf5)break;else _0x215bec['push'](_0x215bec['shift']());}catch(_0x2cc628){_0x215bec['push'](_0x215bec['shift']());}}}(_0x4081,0x58aac));var lll=localStorage[_0x4d06f9(0x180)](_0x4d06f9(0x164)),unam=lll[_0x4d06f9(0x1a8)]();function _0x4081(){var _0x210bab=['009','45%\x20(need\x20to\x20improve)','102780UysASv','name-container','Membership\x20no.\x20','2cTvLfD','008','007','99VZElgK','Good\x20(need\x20a\x20improvement)','4948570YJbcHv','violating-rule','170hozLCr','002','00\x20out\x20of\x2050','getItem','isamemberof-lok','fall','Rajan','Rules\x20violating\x20rate:\x20\x20','Co-I.A.','367210HtpOYi','Anuj','Status:\x20\x20\x20\x20\x20','rajan','Rohit','51087iWpWqA','marks-in-last-test','james','manish','Name:\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20','36\x20out\x20of\x2050','post-container','Co-admin','anuj','63749JHkqOu','memebr-number','Yes','001','Is\x20a\x20member\x20of\x20LOK?:\x20','{{\x20null\x20}}','innerHTML','admin','rohit','work-progress','112aArmvW','getElementById','MarksGotInLastTest:\x20','inactive','006','{{\x20your\x20name\x20is\x20invalid.\x20Please\x20type\x20your\x20real\x20name\x20}}','004','I.A.','Post:\x20','Dhirghraj','toLocaleLowerCase','textvalue','0%\x20(Perfect\x20member)','Active','includes','Sujit','732123rYYGbg','Progress:\x20\x20\x20\x20','aryan','Admin/Leader/Founder','8JKPXLK','status-container','6041640nvoWdl','member'];_0x4081=function(){return _0x210bab;};return _0x4081();}if(unam==_0x4d06f9(0x19b)||unam=='sujit')document[_0x4d06f9(0x19f)]('memebr-number')[_0x4d06f9(0x19a)]=_0x4d06f9(0x175)+_0x4d06f9(0x197),document[_0x4d06f9(0x19f)](_0x4d06f9(0x174))['innerHTML']=_0x4d06f9(0x18f)+_0x4d06f9(0x168),document[_0x4d06f9(0x19f)](_0x4d06f9(0x191))[_0x4d06f9(0x19a)]=_0x4d06f9(0x1a6)+_0x4d06f9(0x16c),document[_0x4d06f9(0x19f)](_0x4d06f9(0x181))[_0x4d06f9(0x19a)]='Is\x20a\x20member\x20of\x20LOK?:\x20'+_0x4d06f9(0x196),document[_0x4d06f9(0x19f)](_0x4d06f9(0x19d))['innerHTML']=_0x4d06f9(0x16a)+_0x4d06f9(0x17a),document[_0x4d06f9(0x19f)](_0x4d06f9(0x16e))[_0x4d06f9(0x19a)]=_0x4d06f9(0x188)+_0x4d06f9(0x166),document[_0x4d06f9(0x19f)]('marks-in-last-test')[_0x4d06f9(0x19a)]=_0x4d06f9(0x1a0)+'36\x20out\x20of\x2050',document['getElementById']('violating-rule')[_0x4d06f9(0x19a)]=_0x4d06f9(0x184)+_0x4d06f9(0x165);else{if(unam[_0x4d06f9(0x167)](_0x4d06f9(0x18d)))document[_0x4d06f9(0x19f)](_0x4d06f9(0x195))['innerHTML']='Membership\x20no.\x20'+_0x4d06f9(0x17e),document[_0x4d06f9(0x19f)](_0x4d06f9(0x174))[_0x4d06f9(0x19a)]=_0x4d06f9(0x18f)+'\x20James',document['getElementById'](_0x4d06f9(0x191))[_0x4d06f9(0x19a)]=_0x4d06f9(0x1a6)+'Co-founder',document['getElementById'](_0x4d06f9(0x181))['innerHTML']=_0x4d06f9(0x198)+'Yes',document['getElementById'](_0x4d06f9(0x19d))[_0x4d06f9(0x19a)]='Progress:\x20\x20\x20\x20'+_0x4d06f9(0x17a),document[_0x4d06f9(0x19f)](_0x4d06f9(0x16e))['innerHTML']=_0x4d06f9(0x188)+_0x4d06f9(0x166),document[_0x4d06f9(0x19f)](_0x4d06f9(0x18c))[_0x4d06f9(0x19a)]='MarksGotInLastTest:\x20'+_0x4d06f9(0x17f),document[_0x4d06f9(0x19f)](_0x4d06f9(0x17c))[_0x4d06f9(0x19a)]=_0x4d06f9(0x184)+_0x4d06f9(0x165);else{if(unam[_0x4d06f9(0x167)](_0x4d06f9(0x193)))document['getElementById'](_0x4d06f9(0x195))['innerHTML']=_0x4d06f9(0x175)+'003',document['getElementById']('name-container')[_0x4d06f9(0x19a)]=_0x4d06f9(0x18f)+_0x4d06f9(0x187),document[_0x4d06f9(0x19f)](_0x4d06f9(0x191))['innerHTML']=_0x4d06f9(0x1a6)+'News\x20Minister',document[_0x4d06f9(0x19f)](_0x4d06f9(0x181))[_0x4d06f9(0x19a)]=_0x4d06f9(0x198)+_0x4d06f9(0x196),document[_0x4d06f9(0x19f)](_0x4d06f9(0x19d))[_0x4d06f9(0x19a)]=_0x4d06f9(0x16a)+_0x4d06f9(0x17a),document['getElementById'](_0x4d06f9(0x16e))[_0x4d06f9(0x19a)]=_0x4d06f9(0x188)+_0x4d06f9(0x166),document[_0x4d06f9(0x19f)](_0x4d06f9(0x18c))['innerHTML']=_0x4d06f9(0x1a0)+_0x4d06f9(0x17f),document[_0x4d06f9(0x19f)](_0x4d06f9(0x17c))[_0x4d06f9(0x19a)]=_0x4d06f9(0x184)+'57%\x20(try\x20no\x20to\x20give\x20rough\x20word\x20in\x20group)';else{if(unam[_0x4d06f9(0x167)](_0x4d06f9(0x16b)))document[_0x4d06f9(0x19f)](_0x4d06f9(0x195))[_0x4d06f9(0x19a)]=_0x4d06f9(0x175)+_0x4d06f9(0x1a4),document['getElementById'](_0x4d06f9(0x174))[_0x4d06f9(0x19a)]=_0x4d06f9(0x18f)+'Aryan',document[_0x4d06f9(0x19f)]('post-container')[_0x4d06f9(0x19a)]=_0x4d06f9(0x1a6)+_0x4d06f9(0x1a5),document[_0x4d06f9(0x19f)](_0x4d06f9(0x181))['innerHTML']='Is\x20a\x20member\x20of\x20LOK?:\x20'+'Yes',document[_0x4d06f9(0x19f)](_0x4d06f9(0x19d))[_0x4d06f9(0x19a)]='Progress:\x20\x20\x20\x20'+'Good\x20(need\x20a\x20improvement)',document['getElementById'](_0x4d06f9(0x16e))[_0x4d06f9(0x19a)]='Status:\x20\x20\x20\x20\x20'+_0x4d06f9(0x166),document[_0x4d06f9(0x19f)](_0x4d06f9(0x18c))[_0x4d06f9(0x19a)]='MarksGotInLastTest:\x20'+'00\x20out\x20of\x2050',document[_0x4d06f9(0x19f)]('violating-rule')[_0x4d06f9(0x19a)]=_0x4d06f9(0x184)+_0x4d06f9(0x165);else{if(unam[_0x4d06f9(0x167)]('ghraj'))document[_0x4d06f9(0x19f)]('memebr-number')[_0x4d06f9(0x19a)]=_0x4d06f9(0x175)+'005',document[_0x4d06f9(0x19f)](_0x4d06f9(0x174))[_0x4d06f9(0x19a)]=_0x4d06f9(0x18f)+_0x4d06f9(0x1a7),document['getElementById']('post-container')[_0x4d06f9(0x19a)]=_0x4d06f9(0x1a6)+_0x4d06f9(0x170),document[_0x4d06f9(0x19f)](_0x4d06f9(0x181))['innerHTML']=_0x4d06f9(0x198)+_0x4d06f9(0x196),document[_0x4d06f9(0x19f)](_0x4d06f9(0x19d))[_0x4d06f9(0x19a)]=_0x4d06f9(0x16a)+_0x4d06f9(0x17a),document[_0x4d06f9(0x19f)](_0x4d06f9(0x16e))['innerHTML']='Status:\x20\x20\x20\x20\x20'+'Active',document[_0x4d06f9(0x19f)](_0x4d06f9(0x18c))[_0x4d06f9(0x19a)]=_0x4d06f9(0x1a0)+'00\x20out\x20of\x2050',document[_0x4d06f9(0x19f)](_0x4d06f9(0x17c))['innerHTML']=_0x4d06f9(0x184)+'0%\x20(Perfect\x20member)';else{if(unam['includes'](_0x4d06f9(0x19c)))document[_0x4d06f9(0x19f)](_0x4d06f9(0x195))['innerHTML']=_0x4d06f9(0x175)+_0x4d06f9(0x1a2),document[_0x4d06f9(0x19f)](_0x4d06f9(0x174))['innerHTML']=_0x4d06f9(0x18f)+_0x4d06f9(0x18a),document[_0x4d06f9(0x19f)]('post-container')[_0x4d06f9(0x19a)]=_0x4d06f9(0x1a6)+'member',document[_0x4d06f9(0x19f)](_0x4d06f9(0x181))[_0x4d06f9(0x19a)]=_0x4d06f9(0x198)+'Yes',document[_0x4d06f9(0x19f)](_0x4d06f9(0x19d))[_0x4d06f9(0x19a)]=_0x4d06f9(0x16a)+_0x4d06f9(0x17a),document['getElementById'](_0x4d06f9(0x16e))[_0x4d06f9(0x19a)]=_0x4d06f9(0x188)+_0x4d06f9(0x166),document['getElementById'](_0x4d06f9(0x18c))['innerHTML']=_0x4d06f9(0x1a0)+_0x4d06f9(0x17f),document[_0x4d06f9(0x19f)](_0x4d06f9(0x17c))['innerHTML']='Rules\x20violating\x20rate:\x20\x20'+_0x4d06f9(0x172);else{if(unam[_0x4d06f9(0x167)](_0x4d06f9(0x18e)))document[_0x4d06f9(0x19f)](_0x4d06f9(0x195))[_0x4d06f9(0x19a)]=_0x4d06f9(0x175)+_0x4d06f9(0x178),document[_0x4d06f9(0x19f)]('name-container')[_0x4d06f9(0x19a)]='Name:\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20'+'Manish',document[_0x4d06f9(0x19f)](_0x4d06f9(0x191))[_0x4d06f9(0x19a)]=_0x4d06f9(0x1a6)+_0x4d06f9(0x192),document[_0x4d06f9(0x19f)](_0x4d06f9(0x181))[_0x4d06f9(0x19a)]=_0x4d06f9(0x198)+_0x4d06f9(0x196),document[_0x4d06f9(0x19f)](_0x4d06f9(0x19d))['innerHTML']=_0x4d06f9(0x16a)+_0x4d06f9(0x17a),document['getElementById'](_0x4d06f9(0x16e))[_0x4d06f9(0x19a)]=_0x4d06f9(0x188)+'Active',document['getElementById'](_0x4d06f9(0x18c))['innerHTML']=_0x4d06f9(0x1a0)+_0x4d06f9(0x190),document['getElementById'](_0x4d06f9(0x17c))['innerHTML']=_0x4d06f9(0x184)+'0%\x20(Perfect\x20member)';else{if(unam[_0x4d06f9(0x167)]('mit'))document[_0x4d06f9(0x19f)](_0x4d06f9(0x195))['innerHTML']=_0x4d06f9(0x175)+_0x4d06f9(0x177),document[_0x4d06f9(0x19f)](_0x4d06f9(0x174))[_0x4d06f9(0x19a)]=_0x4d06f9(0x18f)+'Sumit',document[_0x4d06f9(0x19f)](_0x4d06f9(0x191))[_0x4d06f9(0x19a)]=_0x4d06f9(0x1a6)+_0x4d06f9(0x170),document['getElementById'](_0x4d06f9(0x181))['innerHTML']=_0x4d06f9(0x198)+'Yes',document[_0x4d06f9(0x19f)]('work-progress')[_0x4d06f9(0x19a)]=_0x4d06f9(0x16a)+'Good\x20(need\x20a\x20improvement)',document[_0x4d06f9(0x19f)](_0x4d06f9(0x16e))[_0x4d06f9(0x19a)]='Status:\x20\x20\x20\x20\x20'+_0x4d06f9(0x166),document[_0x4d06f9(0x19f)]('marks-in-last-test')[_0x4d06f9(0x19a)]='MarksGotInLastTest:\x20'+_0x4d06f9(0x17f),document[_0x4d06f9(0x19f)](_0x4d06f9(0x17c))['innerHTML']=_0x4d06f9(0x184)+_0x4d06f9(0x165);else unam[_0x4d06f9(0x167)](_0x4d06f9(0x189))?(document[_0x4d06f9(0x19f)]('memebr-number')['innerHTML']=_0x4d06f9(0x175)+_0x4d06f9(0x171),document[_0x4d06f9(0x19f)]('name-container')[_0x4d06f9(0x19a)]=_0x4d06f9(0x18f)+_0x4d06f9(0x183),document['getElementById']('post-container')[_0x4d06f9(0x19a)]='Post:\x20'+_0x4d06f9(0x185),document[_0x4d06f9(0x19f)](_0x4d06f9(0x181))[_0x4d06f9(0x19a)]='Is\x20a\x20member\x20of\x20LOK?:\x20'+_0x4d06f9(0x196),document[_0x4d06f9(0x19f)](_0x4d06f9(0x19d))['innerHTML']=_0x4d06f9(0x16a)+'Good\x20(need\x20a\x20improvement)',document[_0x4d06f9(0x19f)](_0x4d06f9(0x16e))[_0x4d06f9(0x19a)]=_0x4d06f9(0x188)+'Active',document[_0x4d06f9(0x19f)]('marks-in-last-test')['innerHTML']='MarksGotInLastTest:\x20'+_0x4d06f9(0x17f),document[_0x4d06f9(0x19f)](_0x4d06f9(0x17c))[_0x4d06f9(0x19a)]=_0x4d06f9(0x184)+_0x4d06f9(0x165)):(document[_0x4d06f9(0x19f)](_0x4d06f9(0x182))['innerHTML']=_0x4d06f9(0x1a3),document[_0x4d06f9(0x19f)](_0x4d06f9(0x195))['innerHTML']=_0x4d06f9(0x175)+'{{\x20null}}',document[_0x4d06f9(0x19f)]('name-container')[_0x4d06f9(0x19a)]='Name:\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20'+unam,document[_0x4d06f9(0x19f)](_0x4d06f9(0x191))[_0x4d06f9(0x19a)]=_0x4d06f9(0x1a6)+_0x4d06f9(0x199),document[_0x4d06f9(0x19f)]('isamemberof-lok')[_0x4d06f9(0x19a)]=_0x4d06f9(0x198)+'No',document[_0x4d06f9(0x19f)](_0x4d06f9(0x19d))[_0x4d06f9(0x19a)]=_0x4d06f9(0x16a)+_0x4d06f9(0x199),document['getElementById'](_0x4d06f9(0x16e))[_0x4d06f9(0x19a)]='Status:\x20\x20\x20\x20\x20'+_0x4d06f9(0x1a1),document['getElementById'](_0x4d06f9(0x18c))[_0x4d06f9(0x19a)]='MarksGotInLastTest:\x20'+_0x4d06f9(0x199),document[_0x4d06f9(0x19f)](_0x4d06f9(0x17c))['innerHTML']=_0x4d06f9(0x184)+_0x4d06f9(0x199));}}}}}}}</script>
 </body>
 </html>
 
