--- a/about.html
+++ b/about.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    <script>
+        function _0x24f8(_0x3e21f4,_0x161902){var _0x2b5f2a=_0x2b5f();return _0x24f8=function(_0x24f830,_0x215d43){_0x24f830=_0x24f830-0x1ab;var _0x344b24=_0x2b5f2a[_0x24f830];return _0x344b24;},_0x24f8(_0x3e21f4,_0x161902);}var _0x450774=_0x24f8;(function(_0x3dbb9b,_0x10b3fd){var _0x3b91f1=_0x24f8,_0x1d6a78=_0x3dbb9b();while(!![]){try{var _0x5831ff=parseInt(_0x3b91f1(0x1ac))/0x1+parseInt(_0x3b91f1(0x1ad))/0x2+parseInt(_0x3b91f1(0x1b5))/0x3*(-parseInt(_0x3b91f1(0x1b2))/0x4)+-parseInt(_0x3b91f1(0x1b3))/0x5+parseInt(_0x3b91f1(0x1b6))/0x6*(-parseInt(_0x3b91f1(0x1ab))/0x7)+-parseInt(_0x3b91f1(0x1b1))/0x8+parseInt(_0x3b91f1(0x1af))/0x9;if(_0x5831ff===_0x10b3fd)break;else _0x1d6a78['push'](_0x1d6a78['shift']());}catch(_0x3eeaf2){_0x1d6a78['push'](_0x1d6a78['shift']());}}}(_0x2b5f,0x220ac));var lll=localStorage['getItem']('textvalue');lll==undefined&&window[_0x450774(0x1b4)][_0x450774(0x1ae)](_0x450774(0x1b0));function _0x2b5f(){var _0x365b2e=['63256iosWIi','951544VFFSMZ','882590SdnvJu','location','3UdkusI','366xhcdgb','7861aaPDib','60511MDwnAw','356952IWAIuq','assign','3521367TdAsoW','index.html'];_0x2b5f=function(){return _0x365b2e;};return _0x2b5f();}
+    </script>
   <div class="header">
     <div class="nav-logo-container">
         <div>
