--- a/home.html
+++ b/home.html
@@ -48,7 +48,7 @@
     </div> 
     <br>
     <div id="welcome-container">
-
+<div class='onesignal-customlink-container'></div>
     </div><br>
     <div id="content-container">
         <div class="sub" id="sub1"> Science</div>
