--- a/video.html
+++ b/video.html
@@ -39,9 +39,9 @@
         </div>
     </div>
 </div>
-    <div id="video-container">
+    <div id="video-container"><center>
         <iframe src="https://drive.google.com/file/d/12QWc1A4vNkzU8NDlGKP7byt3Q0pziWy2/preview" width="640" height="480" allow="autoplay"></iframe>
-    </div>
+        </center></div>
 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam velit fuga adipisci vero delectus at aperiam numquam magnam earum dolor nisi illo eos error aspernatur veritatis obcaecati, ab voluptate recusandae!
 <script src="script.js"></script>
 
