--- a/video.html
+++ b/video.html
@@ -40,8 +40,9 @@
     </div>
 </div>
     <div id="video-container"><center>
-        <iframe src="https://drive.google.com/file/d/12QWc1A4vNkzU8NDlGKP7byt3Q0pziWy2/preview" width="145px" height="200px" allow="autoplay"></iframe>
-        </center></div>
+        <iframe src="https://drive.google.com/file/d/12QWc1A4vNkzU8NDlGKP7byt3Q0pziWy2/preview" width="55px" height="100px" allow="autoplay"></iframe>
+        </center>
+    The LOK anthem || created by admin</div>
 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam velit fuga adipisci vero delectus at aperiam numquam magnam earum dolor nisi illo eos error aspernatur veritatis obcaecati, ab voluptate recusandae!
 <script src="script.js"></script>
 
