--- a/video.html
+++ b/video.html
@@ -40,9 +40,9 @@
     </div>
 </div>
     <div id="video-container"><center>
-        <iframe src="https://drive.google.com/file/d/12QWc1A4vNkzU8NDlGKP7byt3Q0pziWy2/preview" width="55px" height="100px" allow="autoplay"></iframe>
+        <iframe src="https://drive.google.com/file/d/12QWc1A4vNkzU8NDlGKP7byt3Q0pziWy2/preview" width="100px" height="145px" allow="autoplay"></iframe>
         </center>
-    The LOK anthem || created by admin</div>
+        <font size="18px" family="arial"> <b>The LOK anthem || created by admin</b></font></div><br>
 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam velit fuga adipisci vero delectus at aperiam numquam magnam earum dolor nisi illo eos error aspernatur veritatis obcaecati, ab voluptate recusandae!
 <script src="script.js"></script>
 
