--- a/video.html
+++ b/video.html
@@ -40,9 +40,9 @@
     </div>
 </div>
     <div id="video-container"><center>
-        <iframe src="https://drive.google.com/file/d/12QWc1A4vNkzU8NDlGKP7byt3Q0pziWy2/preview" width="125px" height="165px" allow="autoplay"></iframe>
+        <iframe src="https://drive.google.com/file/d/12QWc1A4vNkzU8NDlGKP7byt3Q0pziWy2/preview" width="100%" height="200px" allow="autoplay"></iframe>
         </center>
-        <font size="14px" family="arial"> <b>The LOK anthem || created by admin</b></font></div><br>
+        <font size="8px" family="arial"> <b>The LOK anthem || created by admin</b></font></div><br>
 <script src="script.js"></script>
 
 </body></html>
