--- a/video.html
+++ b/video.html
@@ -42,7 +42,7 @@
     <div id="video-container"><center>
         <iframe src="https://drive.google.com/file/d/12QWc1A4vNkzU8NDlGKP7byt3Q0pziWy2/preview" width="100%" height="200px" allow="autoplay"></iframe>
         </center>
-        <font size="8px" family="arial"> <b>The LOK anthem || created by admin</b></font></div><br>
+        <font size="16px" family="arial"> The LOK anthem || created by admin</font></div><br>
 <script src="script.js"></script>
 
 </body></html>
