--- a/home.html
+++ b/home.html
@@ -48,13 +48,17 @@
     
     <div id="content-container">
         <div class="sub" id="sub1"> Science</div>
-        <div class="hw" id="hw1"> Learn </div>
+        <div class="hw" id="hw1"> . Learn Faraday's Law <br>
+. Learn any 2 hypothesis
+ </div>
         <br>
-        <div class="sub" id="sub2">Cmath</div>
-        <div class="hw" id="hw2">Qno {{null}}</div>
+        <div class="sub" id="sub2">Omath</div>
+        <div class="hw" id="hw2">. set 55 Group C as much as you can <br>
+. set 15, 7A, 11
+</div>
         <br>
-        <div class="sub" id="sub3">Omath</div>
-        <div class="hw" id="hw3">Qno {{ null }}</div>
+        <div class="sub" id="sub3">HPE</div>
+        <div class="hw" id="hw3">.Learn 2 pages of EHP everyday</div>
         <br>
 
         
