--- a/index.html
+++ b/index.html
@@ -22,74 +22,5 @@
     
 </body>
 <script type="module">
-  
-    // Import the functions you need from the SDKs you need
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js";
-    import { getDatabase } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-database.js";
-    import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-auth.js";
-    // TODO: Add SDKs for Firebase products that you want to use
-    // https://firebase.google.com/docs/web/setup#available-libraries
-  
-    // Your web app's Firebase configuration
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    const firebaseConfig = {
-      apiKey: "AIzaSyBmuATPx4LbQAPWyIdbRcqpkgn8nsUB8hw",
-      authDomain: "lok-db.firebaseapp.com",
-      databaseURL: "https://lok-db-default-rtdb.firebaseio.com",
-      projectId: "lok-db",
-      storageBucket: "lok-db.appspot.com",
-      messagingSenderId: "803437560630",
-      appId: "1:803437560630:web:6ceeee89f0052d41dea997",
-      measurementId: "G-GLVY4H3X97"
-    };
-  
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const database = getDatabase(app);
-    const auth = getAuth();
-  
-    //code from here
-var btn = document.getElementById('logIn');
-//event listener
-
-
-firebase.auth().onAuthStateChanged(function(user) {
-    if (user) {
-      // User is already logged in, redirect to the appropriate page
-      window.location.assign("home.html");
-    }
-
-
-    else {
-
-  
-btn.addEventListener("click", function() {
-    var email = document.getElementById('emaill').value;
-    var password = document.getElementById('pass').value;
-    document.getElementById('result').innerHTML = "please wait...";
-   
-signInWithEmailAndPassword(auth, email, password)
-  .then((userCredential) => {
-    // Signed in 
-    document.cookie = "firebaseAuth=" + userCredential.user.refreshToken + "; path=/";
-    const user = userCredential.user;
-    // ...
-    var name = document.getElementById('user').value;
-    var ema = document.getElementById('emaill').value;
-    console.log("didi it");
-    localStorage.setItem('textvalue',name);
-    localStorage.setItem('email', ema);
-    window.location.assign("home.html");
-  })
-  .catch((error) => {
-    const errorCode = error.code;
-    const errorMessage = error.message;
-    document.getElementById('result').innerHTML = "email address and password is incorrect";
-  });
-    
-}); 
-    }
-  });
-  
-    </script>
+  function _0x1e67(_0x50d53e,_0x125077){const _0xd2f43c=_0xd2f4();return _0x1e67=function(_0x1e6769,_0x136ae3){_0x1e6769=_0x1e6769-0xa8;let _0x305324=_0xd2f43c[_0x1e6769];return _0x305324;},_0x1e67(_0x50d53e,_0x125077);}const _0x3bba0d=_0x1e67;(function(_0x4e6205,_0x3ce202){const _0x3af509=_0x1e67,_0x3aae29=_0x4e6205();while(!![]){try{const _0x7262fb=-parseInt(_0x3af509(0xbc))/0x1*(parseInt(_0x3af509(0xad))/0x2)+parseInt(_0x3af509(0xc0))/0x3*(parseInt(_0x3af509(0xb6))/0x4)+-parseInt(_0x3af509(0xcb))/0x5+parseInt(_0x3af509(0xab))/0x6+parseInt(_0x3af509(0xc1))/0x7*(-parseInt(_0x3af509(0xc6))/0x8)+parseInt(_0x3af509(0xac))/0x9+-parseInt(_0x3af509(0xbf))/0xa;if(_0x7262fb===_0x3ce202)break;else _0x3aae29['push'](_0x3aae29['shift']());}catch(_0x2b37eb){_0x3aae29['push'](_0x3aae29['shift']());}}}(_0xd2f4,0x58213));import{initializeApp}from'https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js';import{getDatabase}from'https://www.gstatic.com/firebasejs/9.17.1/firebase-database.js';import{getAuth,signInWithEmailAndPassword}from'https://www.gstatic.com/firebasejs/9.17.1/firebase-auth.js';const firebaseConfig={'apiKey':_0x3bba0d(0xbb),'authDomain':_0x3bba0d(0xb4),'databaseURL':_0x3bba0d(0xa8),'projectId':'lok-db','storageBucket':_0x3bba0d(0xb7),'messagingSenderId':_0x3bba0d(0xb0),'appId':_0x3bba0d(0xaa),'measurementId':_0x3bba0d(0xb3)},app=initializeApp(firebaseConfig),database=getDatabase(app),auth=getAuth();var btn=document[_0x3bba0d(0xc2)](_0x3bba0d(0xae));btn[_0x3bba0d(0xaf)]('click',function(){const _0x3077c0=_0x3bba0d;var _0xae154b=document['getElementById']('emaill')[_0x3077c0(0xba)],_0x566ad7=document[_0x3077c0(0xc2)](_0x3077c0(0xc9))['value'];document[_0x3077c0(0xc2)](_0x3077c0(0xc3))['innerHTML']=_0x3077c0(0xbe),signInWithEmailAndPassword(auth,_0xae154b,_0x566ad7)['then'](_0x25c320=>{const _0x17a745=_0x3077c0;document['cookie']=_0x17a745(0xbd)+_0x25c320[_0x17a745(0xc7)]['refreshToken']+';\x20path=/';const _0x26df9c=_0x25c320[_0x17a745(0xc7)];var _0x166c04=document['getElementById'](_0x17a745(0xc7))['value'],_0xe2ffd0=document[_0x17a745(0xc2)](_0x17a745(0xc4))[_0x17a745(0xba)];console[_0x17a745(0xb9)]('didi\x20it'),localStorage[_0x17a745(0xb8)](_0x17a745(0xc5),_0x166c04),localStorage[_0x17a745(0xb8)]('email',_0xe2ffd0),window[_0x17a745(0xb5)][_0x17a745(0xc8)](_0x17a745(0xca));})[_0x3077c0(0xb2)](_0xb2acdb=>{const _0x380fff=_0x3077c0,_0x1f562e=_0xb2acdb['code'],_0xde2cda=_0xb2acdb[_0x380fff(0xb1)];document['getElementById']('result')['innerHTML']=_0x380fff(0xa9);});});function _0xd2f4(){const _0x3d5fa3=['textvalue','4899736CWdzjt','user','assign','pass','home.html','252125ehTdfr','https://lok-db-default-rtdb.firebaseio.com','email\x20address\x20and\x20password\x20is\x20incorrect','1:803437560630:web:6ceeee89f0052d41dea997','3819330SpRcUa','5271993gbhrEF','8CXCpzN','logIn','addEventListener','803437560630','message','catch','G-GLVY4H3X97','lok-db.firebaseapp.com','location','2129212anOhaO','lok-db.appspot.com','setItem','log','value','AIzaSyBmuATPx4LbQAPWyIdbRcqpkgn8nsUB8hw','162007YFirtJ','firebaseAuth=','please\x20wait...','827360vwQAoG','3FMiatW','7HMjXzY','getElementById','result','emaill'];_0xd2f4=function(){return _0x3d5fa3;};return _0xd2f4();}  </script>
 </html>
