--- a/home.html
+++ b/home.html
@@ -38,21 +38,22 @@
 </div>
 <div id="main-content-container">
     <div id="content-header-container">
-        SEARCH THE LIGHT (45 DAY PLAN)
+        SEARCH THE LIGHT (40 DAY PLAN)
     </div> 
     <br>
     <div id="welcome-container">
 
     </div><br>
+    <div id="date-container">Date:- 2/9/2023 </div>
     <div id="content-container">
-        <!-- <div class="sub" id="sub1"> Science</div>
+        <div class="sub" id="sub1"> Science</div>
         <div class="hw" id="hw1"> Learn </div>
         <br>
         <div class="sub" id="sub2">Cmath</div>
         <div class="hw" id="hw2">Qno {{null}}</div>
         <br>
         <div class="sub" id="sub3">Omath</div>
-        <div class="hw" id="hw3">Qno {{ null }}</div> -->
+        <div class="hw" id="hw3">Qno {{ null }}</div>
         <br>
 
         
