--- a/home.html
+++ b/home.html
@@ -47,13 +47,13 @@
     <div id="date-container">Date:- 2/9/2023 </div>
     <div id="content-container">
         <div class="sub" id="sub1"> Science</div>
-        <div class="hw" id="hw1"> Learn </div>
+        <div class="hw" id="hw1"> Learn working mechanism of water pump</div>
         <br>
-        <div class="sub" id="sub2">Cmath</div>
-        <div class="hw" id="hw2">Qno {{null}}</div>
+        <div class="sub" id="sub2">EHP</div>
+        <div class="hw" id="hw2"> Learn 2 page</div>
         <br>
         <div class="sub" id="sub3">Omath</div>
-        <div class="hw" id="hw3">Qno {{ null }}</div>
+        <div class="hw" id="hw3"> Do any two question from group C of set 27 and 29</div>
         <br>
 
         
